--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "camera-web-app",
+  "name": "@dbrain/camera-web-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@koale/useworker": "^4.0.2",
-    "@shopify/react-web-worker": "^5.0.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.3",
     "face-api.js": "^0.22.2",
-    "heic2any": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
