--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@dbrain/camera-web-app",
-  "version": "0.1.0",
+  "name": "web-sdk-demo",
+  "version": "1.0.0",
   "dependencies": {
     "axios": "^1.2.3",
     "face-api.js": "^0.22.2",
